samples/_failures_safe/1761308257_7f7f4f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15ba4d99.c: In function ‘main’:
./samples/SAFE/__tmp_15ba4d99.c:180:31: error: expected ‘)’ at end of input
  180 |     if (state_machine_finalize
      |        ~                      ^
      |                               )
./samples/SAFE/__tmp_15ba4d99.c:180:5: error: expected declaration or statement at end of input
  180 |     if (state_machine_finalize
      |     ^~
